--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,6 +20,10 @@ custom_css:
                         <h1>
                             {{ page.title }}
                         </h1>
+                     <div class="vote-info">
+                        <i class="fa fa-book"></i> <a>{{ page.content | number_of_words | append: " Parole" }}</a>
+                        <i class="fa fa-clock-o"></i> <a>Tempo di lettura: {{ page.content | number_of_words | divided_by: 180 | append: " minuti" }}</a>
+                     </div>
                     </div>
                     	{{ content }}
                     <hr>
