--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -3,7 +3,7 @@
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
             <h1>
-                <span data-i18n="projects.my_projects">My Projects</span>
+                <span data-i18n="projects.my_projects">I Miei Progetti</span>
             </h1>
         </div>
     </div>
