Single footer for the whole site - More simple and easier :)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,7 @@ layout: default
 
     {{ content }}
 
-    {% if page.title != 'Home' %}
-        {% include foot.html %}
-    {% else %}
-        {% include index_foot.html %}
-    {% endif %}
+{% include footer.html %}   
 
 </body>
 </html>
