--- a/_includes/category.html
+++ b/_includes/category.html
@@ -53,7 +53,7 @@ $(function(){
                                     <div class="small text-right">
                                         <div>
                                             {% if site.disqus %}
-                                            <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ post.url }}">0</span> comments
+                                            <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ post.url }}">0</span>
                                             {% endif %}
                                         </div>
                                     </div>
