--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ custom_css:
                             <div class="small text-right">
                                 <div>
                                 {% if site.disqus %}
-                                <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ page.url }}">0</span> comments
+                                <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ page.url }}">0</span> 
                                 {% endif %}
                                 </div>
                             </div>
