Added Cookie-Bar (cookie-bar.eu)

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,5 @@
   <!-- Main Scripts -->
   <script src="{{"/static/assets/app-20180717.min.js"| prepend: site.baseurl }}"></script>
   <script src="{{"/static/assets/blog-20180717.min.js"| prepend: site.baseurl }}"></script>
+  {% include cookieconsent.html %}
   </head>
