--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -21,4 +21,5 @@
   {% if site.data.index.language %}
   <script src="{{"/static/assets/i18-20180717.min.js"| prepend: site.baseurl }}"></script>
   {% endif %}
+  {% include cookieconsent.html %}
 </head>
