--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,9 @@
 {% if site.disqus %}
+
 <div id="disqus_thread"></div>
-<script>
+<script type="text/javascript">
+	cookieValue = document.cookie.match(/(;)?cookiebar=([^;]*);?/)[2];
+	if (cookieValue == 'CookieAllowed') {
 /** 
 * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS. 
 * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables 
@@ -16,6 +19,7 @@
 		s.setAttribute('data-timestamp', +new Date());
 		(d.head || d.body).appendChild(s);
 	})();
+}
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 {% endif %}
