--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,32 +28,68 @@ custom_css:
                     	{{ content }}
                     <hr>
                     <div class="row">
-                        <div class="col-md-6">
-                                <h5 style="display: inline;">Tags:</h5>
-                                {% for tag in page.tags %}
-                                    <button class="btn btn-white btn-xs" type="button">{{ tag }}</button>
-                                {% endfor %}
-                        </div>
-                        <div class="col-md-6">
-                            <div class="small text-right">
-                                <div>
-                                {% if site.disqus %}
-                                <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ page.url }}">0</span> 
-                                {% endif %}
+                            <div class="row">
+                                    <div class="col-md-6">
+                                            <h5 style="display: inline;">Tags:</h5>
+                                            {% for tag in page.tags %}
+                                                <button class="btn btn-white btn-xs" type="button">{{ tag }}</button>
+                                            {% endfor %}
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="small text-right">
+                                            <div>
+                                            {% if site.disqus %}
+                                            <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ page.url }}">0</span> 
+                                            {% endif %}
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
+                                <br>
                     <div class="row">
+                      
                         <div class="col-lg-12">
-                            <!-- donate -->
-                            {% if site.donation %}
-                            {% include donate.html %}
-                            {% endif %}
                             <br>
                             <!-- share -->
                             {% include share.html %}
+                            <br>
+                            <div class="col-lg-12">
+                                <h4 class="relh4">Potrebbe Interessarti Anche...</h4>    
+                                            <div class="rect">                                        
+                                            {% assign maxRelated = 3 %}
+                                            {% assign minCommonTags =  1 %}
+                                            {% assign maxRelatedCounter = 0 %}
+                                            
+                                              {% for post in site.posts %}
+                                            
+                                                {% assign sameTagCount = 0 %}
+                                                {% assign commonTags = '' %}
+                                            
+                                                {% for tag in post.tags %}
+                                                  {% if post.url != page.url %}
+                                                    {% if page.tags contains tag %}
+                                                      {% assign sameTagCount = sameTagCount | plus: 1 %}
+                                                      {% capture tagmarkup %} <span class="label label-default">{{ tag }}</span> {% endcapture %}
+                                                      {% assign commonTags = commonTags | append: tagmarkup %}
+                                                    {% endif %}
+                                                  {% endif %}
+                                                {% endfor %}
+                                            
+                                                {% if sameTagCount >= minCommonTags %}
+                                                 <a href="{{ site.baseurl }}{{ post.url }}">
+                                                   <div class="rel">
+                                                      <img src="{{post.image}}" alt="{{post.description}}">
+                                                      <h5>{{ post.title }}</h5>
+                                                  </div>
+                                                 </a>
+                                                 {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+                                                  {% if maxRelatedCounter >= maxRelated %}
+                                                    {% break %}
+                                                  {% endif %}
+                                                {% endif %}                                          
+                                              {% endfor %}
+                                        </div>
+                                    </div>
                             <br>
                             <!-- comment -->
                             {% include comments.html %}
