--- a/static/css/blogpadding.css
+++ b/static/css/blogpadding.css
@@ -5,3 +5,51 @@
     height: 75px;
     visibility: hidden;
 }
+/*
+.rect {
+    border-top: 2px solid #eeeeee;
+    border-bottom: 2px solid #eeeeee;
+    padding-top: 15px;
+    margin:0 auto;
+}
+.rel {
+    width: 25%;
+    max-width: 25%;
+    min-width: 25%;
+    padding: 10px;
+    vertical-align: middle;
+    display: inline-block;
+    flex-basis: 25%;
+}
+.rel-image{
+    display: inline-block;
+    padding: 0px 20px 5px 10px;
+    opacity: 0.7;
+}
+*/
+h4.relh4 {
+    margin-top: 2em !important;
+    margin-bottom: .5em !important;
+}
+.rect {
+    border-top: 2px solid #eeeeee;
+    border-bottom: 2px solid #eeeeee;
+    padding-top: 10px;
+    padding-bottom: 15px;
+    width: 100%;
+    display: inline-flex;
+}
+.rel {
+    width: 100%;
+    max-width: 250px;
+    min-width: 33%;
+    padding: 10px;
+    text-align: left;
+}
+.rel img {
+    max-width: 100%;
+    opacity: 0.7;
+}
+.rel img:hover {
+    opacity: 1;
+}
