--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: default
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Person" lang="it">
 
-    {% if page.title != 'Home' %}
+    {% if page.title != 'Cristian Castellari' %}
         {% include head.html %}
     {% else %}
         {% include index_head.html %}
@@ -13,7 +13,7 @@ layout: default
 
 <body id="page-top" class="landing-page">
 
-    {% if page.title != 'Home' %}
+    {% if page.title != 'Cristian Castellari' %}
         {% include blog_header.html %}
     {% endif %}
 
