New share buttons

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@ custom_css:
                         <div class="col-lg-12">
                             <br>
                             <!-- share -->
-                            {% include share.html %}
+                            {% include social.html %}
                             <br>
                                 <div class="related-container">
                                 <h4 class="relh4">Potrebbe Interessarti Anche...</h4>    
