--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1441,6 +1441,11 @@ code {
   color: #fff;
 }
 
+.navy-bg-present {
+  background-color: #1cf400;
+  color: #fff;
+}
+
 .panel-primary {
   border-color: #3385FF;
 }
