--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,79 +1,92 @@
 <style>
-.share-box {
-    text-align: center;
-    /* margin: 1.5rem -1rem 1.5rem -1rem; */
-    font-size: 1.5rem;
-}
-.share-box a {
-  display: inline-block;
-  -webkit-box-shadow: 0 0 1px #777;
-  box-shadow: 0 0 1px #777;
-  padding: 5px 12px;
-  margin-right: 5px;
-  margin-bottom: 5px;
-  text-decoration: none; }
-  .share-box a:hover {
-    text-decoration: none;
-    -webkit-transition: background-color 200ms linear;
-    -ms-transition: background-color 200ms linear;
-    transition: background-color 200ms linear; }
- .share-box h5 {
-    font-size: 1.5rem;
-}
-.f {
-  color: #3b5998; }
-  .f:hover {
-    color: #fff;
-    background-color: #3b5998; }
-
-.t {
-  color: #4099FF; }
-  .t:hover {
-    color: #fff;
-    background-color: #4099FF; }
-
-.g {
-  color: #d34836; }
-  .g:hover {
-    color: #fff;
-    background-color: #d34836; }
-
-.r {
-  color: #ff5700; }
-  .r:hover {
-    color: #fff;
-    background-color: #ff5700; }
-
-.l {
-  color: #0077b5; }
-  .l:hover {
-    color: #fff;
-    background-color: #0077b5; }
-
-.e {
-  color: #444444; }
-  .e:hover {
-    color: #fff;
-    background-color: #444444; }
-</style>
-
+  .share-box {
+      text-align: center;
+      font-size: 1.5rem;
+      border-color: #eee !important;
+      margin-top: 4rem;
+      padding: 2rem; }
+  
+    .share-box h5 {
+      font-size: 1.5rem;
+      margin-bottom: 2.5rem; }
+  
+  .share-box a {
+    display: inline-block;
+    -webkit-box-shadow: 0 0 1px #eee;
+    box-shadow: 0 0 1px #eee;
+    padding: 5px 12px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    text-decoration: none; 
+    border-bottom: none; }
+    .share-box a:hover {
+      text-decoration: none;
+      -webkit-transition: background-color 200ms linear;
+      -ms-transition: background-color 200ms linear;
+      transition: background-color 200ms linear; }
+  
+  /* All buttons */
+  .share-buttons {
+  }
+  
+  .f {
+    color: #3b5998; }
+    .f:hover {
+      color: #fff !important;
+      background-color: #3b5998; }
+  .t {
+    color: #4099FF; }
+    .t:hover {
+      color: #fff !important;
+      background-color: #4099FF; }
+  .r {
+    color: #ff5700; }
+    .r:hover {
+      color: #fff !important;
+      background-color: #ff5700; }
+  .l {
+    color: #0077b5; }
+    .l:hover {
+      color: #fff;
+      background-color: #0077b5; }
+  .e {
+    color: #444444; }
+    .e:hover {
+      color: #fff !important;
+      background-color: #444444; }  
+  </style>
+  
 <div class="share-box">
 <h5>Condividi:</h5>
+  
+  <div class="share-buttons">
+    <a  class="f" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ site.baseurl }}{{ page.url }}"
+      onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
+      title="Share on Facebook" >
+      <i class="fa fa-facebook-official share-button"> facebook</i>
+    </a>
 
-<a class="f" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-facebook-official fa"></i></a>
+    <a  class="t" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
+      onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
+      title="Share on Twitter" >
+      <i class="fa fa-twitter share-button"> twitter</i>
+    </a>
 
-<a class="t" href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"><i class="fa fa-twitter fa"></i></a>
-        
-<a class="g" href="https://plus.google.com/share?url={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-google-plus fa"></i></a>
-        
-<a class="r" href="http://www.reddit.com/submit?url={{ site.url }}{{site.baseurl}}{{ page.url }}" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-reddit fa"></i></a>
+    <a class="r" href="http://www.reddit.com/submit?url={{ site.url }}{{ site.baseurl }}{{ page.url }}"
+      onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=900,height=500,toolbar=1,resizable=0'); return false;"
+      title="Share on Reddit" >
+      <i class="fa fa-reddit-alien share-button"> reddit</i>
+    </a>    
 
-<a class="l" href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{site.baseurl}}{{ page.url }}&title={{ page.title }}&summary={{ page.desc }}&source=webjeda" onclick="window.open(this.href, 'mywin',
-'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" ><i class="fa fa-linkedin fa"></i></a>
+    <a  class="l" href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ site.baseurl }}{{ page.url }}&title={{ page.title }}&summary={{ page.description }}&source={{ site.title }}"
+      onclick="window.open(this.href, 'pop-up', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;"
+      title="Share on LinkedIn" >
+      <i class="fa fa-linkedin share-button"> linkedin</i>
+    </a>
 
-<a class="e" href="mailto:?subject={{ page.title }}&amp;body=Check out this site {{ site.url }}{{site.baseurl}}{{ page.url }}"><i class="fa fa-envelope fa"></i></a>                          
+    <a  class="e" href="mailto:?subject={{ page.title }}&amp;body=Check out this site {{ site.url }}{{ site.baseurl }}{{ page.url }}"
+      title="Share via Email" >
+      <i class="fa fa-envelope share-button"> email</i>
+    </a>
+  </div>
 </div>
