--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -5,6 +5,6 @@
 {% endif %}
 {% if counter == 0 %}
     <div class="col-lg-8 col-lg-offset-2">
-		<p>Sorry,no blog！</p>
+		<p>Spiacente, qui non ci sono ancora articoli！</p>
     </div>
 {% endif %}
