--- a/_includes/category.html
+++ b/_includes/category.html
@@ -17,7 +17,7 @@ $(function(){
     <div class="col-lg-12 text-center">
         <div class="navy-line"></div>
         {% assign category = page.url | remove:'/' | capitalize %}
-        {% if category == 'Html' %}
+        {% if category == 'Html' or category == 'Itil' %}
         {% assign category = category | upcase %}
         {% endif %}
         <h1>{{ category }}</h1>
