Aggiornamento cookie consent

--- a/_includes/cookieconsent.html
+++ b/_includes/cookieconsent.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?theme=momh&thirdparty=1&always=1&scrolling=1&refreshPage=1"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?theme=momh&thirdparty=1&always=1&refreshPage=1&showNoConsent=1&noConfirm=1&showPolicyLink=1&privacyPage=https%3A%2F%2Fcristiancastellari.it%2Fabout%2Fprivacy%2F"></script>
