--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <div class="row" style="background: #1c1e1e">
     <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
       <p id="jalpc_site_pv" style="color: #FFFFFF">
-        <strong>&copy; {{ 'now' | date: "%Y" }} {{ site.title }}</strong><br />
-        <a href="/about/disclaimer/"> Disclaimer </a> | <a href="/about/privacy/"> Informativa Privacy</a>
+        <strong>&copy; 2019 - {{ 'now' | date: "%Y" }} {{ site.title }}</strong><br />
+        <a href="/about/disclaimer/"> Disclaimer </a> | <a href="/about/privacy/"> Informativa Privacy</a> &nbsp; <a rel="me" href="https://mastodon.uno/@cristiancastellari"></a>
       </p>
     </div>
 </div>
