--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
       <p id="jalpc_site_pv" style="color: #FFFFFF">
         <strong>&copy; 2019 - {{ 'now' | date: "%Y" }} {{ site.title }}</strong><br />
-        <a href="/about/disclaimer/"> Disclaimer </a> | <a href="/about/privacy/"> Informativa Privacy</a> &nbsp; <a rel="me" href="https://mastodon.uno/@cristiancastellari"></a>
+        <a href="/about/disclaimer/"> Disclaimer </a> | <a href="/about/privacy/"> Informativa Privacy</a> &nbsp; <a rel="me" style="display:none;" href="https://mastodon.uno/@cristiancastellari">Mastodon</a>
       </p>
     </div>
 </div>
