--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,10 @@
     <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
       <p id="jalpc_site_pv" style="color: #FFFFFF">
         <strong>&copy; 2019 - {{ 'now' | date: "%Y" }} {{ site.title }}</strong><br />
-        <a href="/about/disclaimer/"> Disclaimer </a> | <a href="/about/privacy/"> Informativa Privacy</a> &nbsp;
-        <a rel="me" style="display:none;" href="https://mastodon.uno/@cristiancastellari">Mastodon</a> &nbsp; <a rel="me" style="display:none;" href="https://sociale.network/@cristian"></a>
+        <a href="/about/disclaimer/"> Disclaimer </a> | <a href="/about/privacy/"> Informativa Privacy</a>
+        <a rel="me" style="display:none;" href="https://mastodon.uno/@cristiancastellari">Mastodon - @cristiancastellari@mastodon.uno</a> 
+        <a rel="me" style="display:none;" href="https://livellosegreto.it/@cristian">@cristian@livellosegreto.it</a> 
+        <a rel="me" style="display:none;" href="https://sociale.network/@cristian"></a>
       </p>
     </div>
 </div>
